# picoc3-audio-stream

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
logs/: picoc3_audio_stream_firmware_RP2040_1672870831006_channel0.txt
src/: adc.rs  audio_packet.rs  bsp.rs  lib.rs  main.rs  pwm_timer.rs  uart_queue.rs
