[package]
authors = ["the rp-rs team"]
edition = "2018"
readme = "README.md"
name = "rp2040-project-template"
version = "0.1.0"
resolver = "2"

[dependencies]
rp2040-hal = { version="0.6.1", features=["rt"] }
rp2040-boot2 = { version="0.2.1", optional = true }
rp2040-monotonic = "1.2.0"
cortex-m-rtic = "1.1.3"

cortex-m = "0.7.6"
cortex-m-rt = { version="0.7.2", optional = true }
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
embedded-hal = { version = "0.2.7" }
embedded-time = "0.12.0"
num-format = { version = "0.4.0", default-features = false }
heapless = "0.7.14"

display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
profont = "0.6.1"
st7789 = "0.7.0"
embedded-text = "0.5.0"

defmt = "0.3.0"
defmt-rtt = "0.4.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]