[package]
authors = ["Nicholas Barrios"]
edition = "2021"
readme = "README.md"
name = "picoc3-audio-stream"
version = "0.1.0"

[lib]
name = "picoc3_audio_stream"
path = "src/lib.rs"

[[bin]]
name = "picoc3_audio_stream_firmware"
path = "src/main.rs"

[dependencies]
rp2040-hal = { version="0.7.0", features=["rt", "eh1_0_alpha"] }
rp2040-pac = "0.4.0"
rp2040-boot2 = { version="0.2.1", optional = true }
rp2040-monotonic = "1.2.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version="0.7.2", optional = true }
cortex-m-rtic = "1.1.3"

embedded-hal = "0.2.7"
eh1_0_alpha = { package = "embedded-hal", version = "1.0.0-alpha.9" }
embedded-hal-nb = "1.0.0-alpha.1"
embedded-time = "0.12.0"
num-format = { version = "0.4.0", default-features = false }
heapless = "^0.7.14"

display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
profont = "0.6.1"
st7789 = "0.7.0"
embedded-text = "0.5.0"

defmt = "^0.3.2"
defmt-rtt = "^0.4.0"
panic-probe = { version = "^0.3", features = ["print-defmt"] }

atat = { version = "^0.18.0", features = ["defmt" ] }
embedded-nal = "^0.6.0"
esp-at-nal = { version = "^0.2.0", features=["thumbv6"] }
fugit-timer = "^0.1.2"

rp2040-pwm-timer = { version = "^0.1", path = "../../rp2040-pwm-timer"}

minicbor = { version = "^0.19.0", features = ["derive"] }

[patch.crates-io]
rp2040-hal = { path = "../rp-hal/rp2040-hal" }
atat = { path = "../atat/atat" }
esp-at-nal = { path = "../rt-esp-at-nal" }

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3